# strands-robots-ros2

./: .gitignore  CITATION.cff  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS
assets/: MEDIA-LICENSE.md
examples/: README.md  curiosity_rosbridge.py  ros2_nav2_navigate.py
examples/web/: index.html  server.py
src/strands_robots_ros2/: __init__.py  robot.py  utils.py
src/strands_robots_ros2/registry/: __init__.py  policies.json  robots.json  user_registry.py
src/strands_robots_ros2/runtime/: __init__.py  base.py  factory.py  lerobot.py  rosbridge.py
src/strands_robots_ros2/runtime/deepracer_v2/: __init__.py  adapter.py  client.py
src/strands_robots_ros2/runtime/http/: __init__.py  adapter.py  freshness.py
src/strands_robots_ros2/runtime/http/auth/: __init__.py  api_key.py  base.py  bearer_token.py  cookie_password.py  none.py
src/strands_robots_ros2/runtime/http/translators/: __init__.py  base.py  joint_passthrough.py  twist_passthrough.py  twist_to_servo.py
src/strands_robots_ros2/runtime/ros2/: __init__.py  adapter.py  lifecycle.py
src/strands_robots_ros2/runtime/ros2/translators/: __init__.py  deepracer.py
src/strands_robots_ros2/skills/: __init__.py  nav2.py
tests/: test_rosbridge.py
